--- a/jar2blockset/requirements.txt
+++ b/jar2blockset/requirements.txt
@@ -1,5 +1,6 @@
 # Generated using 'pipreqs' module
-numpy==1.21.5
-Pillow==11.1.0
-PyYAML==6.0.2
-Requests==2.32.3
+numpy==2.2.4
+Pillow==11.2.0
+PyYAML==6.0.1
+Requests==2.31.0
+simpleeval==1.0.3
