--- a/jar2blockset/blacklist-default.yml
+++ b/jar2blockset/blacklist-default.yml
@@ -135,7 +135,7 @@ filters:
   - warped_door$
   - warped_stem_top.png
 
-  # 1.21.4
+  # 1.21.5
   - $copper_bulb_lit_powered.png
   - $copper_bulb_powered.png
   - $copper_door_top.png
@@ -149,6 +149,8 @@ filters:
   - pale_moss_carpet.png
   - pale_oak_door$
   - pale_oak_log_top.png
+  - test_$
   - trial_spawner_top$
   - vault_bottom$
   - vault_top$
+  - wildflowers$
