--- a/vueblocks/tsconfig.json
+++ b/vueblocks/tsconfig.json
@@ -11,6 +11,6 @@
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true,
     },
-    "include": ["src"],
+    "include": ["src", "vite-env.d.ts"],
     "exclude": ["node_modules", "dist"],
 }
