Include 1.8.9 and 1.5.2 in default blocksets, palettes and popover components styling updates

--- a/jar2blockset/blacklist-default.yml
+++ b/jar2blockset/blacklist-default.yml
@@ -25,9 +25,7 @@ filters:
   - dropper_front.png
   - enchantment_$
   - endframe_top.png
-  - grass_side.png
-  - grass_side_overlay.png
-  - grass_top$
+  - grass_$
   - hopper$
   - itemframe$
   - lava$
