--- a/vueblocks/package.json
+++ b/vueblocks/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
     "@eslint/js": "^9.18.0",
+    "@types/js-cookie": "^3.0.6",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/eslint-plugin": "1.1.25",
     "@vue/test-utils": "^2.4.6",
